--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="es"><head>
   <meta charset="utf-8">
   <title>Delivery App</title>
-  <base href="/">
+  <base href="*">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
  
